modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-details-dialog.less
.issue-details-dialog {

  @toggler-width: 35px;

  .dialog-content {
    padding: 5px 0px;
  }

  .dialog-header {
    margin-bottom: 0px;
    position: relative;

    .title {
      display: block;
      max-width: calc(~'100% - 140px');
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
      line-height: 36px;
      float: left;
    }

    .issue-id {
      color: @admin-font-gray1;
      font-size: 30px;
      line-height: 36px;
      padding-left: 10px;
    }

    .sub-title {
      display: inline-block;
      margin: 10px 0 15px;
      font-size: 13px;
      float: left;
      clear: both;

      .creator, .assignee {
        color: @admin-black;
        font-weight: bold;
      }
    }

    .edit {
      .icon-pencil2;
      text-decoration: none;
      position: absolute;
      right: 15px;
      top: 8px;
      font-size: 18px;
      color: @admin-font-gray2;

      &:hover {
        color: @admin-font-gray3;
      }
    }
  }

  .icon-tree {
    font-size: 20px;
    line-height: 32px;

    .button(@admin-font-gray2, transparent, @admin-font-gray3, transparent, false);

    &.on {
      .button(@admin-button-blue1, transparent, @admin-button-blue1, transparent, false);

      padding: 0;
      width: @toggler-width;
    }

    padding: 0;
    width: @toggler-width;
  }

  .required {
    &:after {
      display: none;
    }
  }

  .issue-dialog-form {
    margin-bottom: 0px;
    padding: 0 !important;

    input-view:not(:last-child) {
      margin-bottom: 0px;
    }

    .description-text {
      margin-bottom: 15px;
      &.empty {
        display: none;
      }
    }

    label {
      font-size: 14px;
    }
  }

  .browse-selection-item .remove {
    display: none;
  }

  .publish-dialog-item-list {

    .browse-selection-item {

      .status {
        line-height: 32px;
      }
    }

    &.contains-toggleable {

      .browse-selection-item:not(.toggleable) {
        margin-left: @toggler-width;
      }

      .include-children-toggler {
        cursor: default;
        &:hover {
          &:before {
            color: @admin-font-gray2;
          }
          &.on {
            &:before {
              color: @admin-button-blue1;
            }
          }
        }
      }
    }
  }
  .button-container {
    width: 100%;

    .cancel-button-bottom {
      display: none;

      float: left;
      margin: 0px;
    }
    .publish-action {
      float: right;
    }

    .checkbox {
      float: right;
      line-height: 24px;
    }
    .show-schedule-action {
      float: right;
    }
  }

  &.nested {
    .button-container .cancel-button-bottom {
      display: block;
    }
  }

  &.is-publishing {
    .issue-dialog-form,
    .dialog-header a.edit,
    .items-header,
    .dialog-buttons div.checkbox {
      display: none;
    }

    .button-container .cancel-button-bottom {
      float: none;
    }
    .title {
      padding-bottom: 10px;
    }

    .sub-title {
      display: none;
    }
  }

  &.no-action {
    .button-container {
      .show-schedule-action,.publish-action, .checkbox{
        display: none !important;
      }
      &:after {
        content: 'No items to publish';

        display: block;
        text-align: center;
        line-height: 32px;
        font-size: 13px;
      }
    }
  }
}

